--- a/src/style.css
+++ b/src/style.css
@@ -166,9 +166,24 @@ nav {
   text-align: center;
 }
 
+.play1 img {
+  display: flex;
+  justify-content: center;
+}
+
+/*skills*/
+.skills {
+  margin: 6rem 6rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.skills img {
+  width: 5%;
+}
 /*email*/
 .contact {
-  min-height: 50vh;
+  min-height: 30vh;
   display: flex;
   flex-wrap: wrap;
 }
@@ -271,17 +286,15 @@ footer h4 {
   .project-pm {
     width: 100%;
   }
-  .project1,
-  .project2,
-  .project3 {
-  }
   .project1 p,
   .project2 p,
   .project3 p {
     justify-content: last baseline;
     text-align: center;
-
     font-size: 15px;
+  }
+  .play1 img {
+    width: 5px;
   }
   /*email*/
   .contact img {
